Modify for ubuntu

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ command=/bin/bash -c "java -Xmx256m -jar /opt/gerrit/site_path/gerrit.war daemon
 autorestart=true
 
 [program:jenkins]
-command=/bin/bash -c "java -Xmx256m -jar /usr/lib/jenkins/jenkins.war --webroot=/var/cache/jenkins/war --httpPort=8081 --ajp13Port=-1 --prefix=/jenkins --httpListenAddress=0.0.0.0"
+command=/bin/bash -c "java -Xmx256m -jar /usr/share/jenkins/jenkins.war --webroot=/var/cache/jenkins/war --httpPort=8081 --ajp13Port=-1 --prefix=/jenkins --httpListenAddress=0.0.0.0"
 autorestart=true
 environment=JENKINS_HOME=/var/lib/jenkins
 
@@ -22,6 +22,6 @@ autorestart=true
 command=/usr/sbin/rsyslogd -n -c3
 autorestart=true
 
-[program:httpd]
-command=httpd -k start
-autorestart=true
+;[program:httpd]
+;command=httpd -k start
+;autorestart=true
